# qt-layout

./: CMakeLists.txt  LICENSE  README.md  layout.h  main.cpp  main_window.h
